# hi

./: Boost.cmake  CMakeLists.txt  Flann.cmake  GSparseHash.cmake  GTest.cmake  HDF5.cmake  LSHBox.cmake  MPI.cmake  PatchOpenMPApple.cmake  README.md  flann.rb  hdf5.cmake
data/tests/: 1028.dna  gaussian__d=14_s=10000_nclus=1_var=0.1.hdf5
src/: main.cpp
src/main/: config.hpp  debug.h  dprint.hpp  dtypes.hpp  file_loader.hpp  global_includes.h  globals.hpp  hi.cpp  hi2.cpp  myomp.hpp  run_hi.cpp  sendvect.cpp
src/main/datastructures/: DataManager.cpp  DataManager.hpp  Euc.cpp  Euc.hpp  Index.hpp  Stat.cpp  Stat.hpp  Timer.cpp  Timer.hpp  data.h  data.hpp  dna.cpp  dna.hpp
src/main/datastructures/controllers/: DataManager.cpp  DataManager.hpp  EucDataManager.cpp  EucDataManager.hpp  FDNADataManager.cpp  FDNADataManager.hpp  MetricDataManager.cpp  MetricDataManager.hpp
src/main/datastructures/datatypes/: Euc.cpp  Euc.hpp  EucBare.cpp  EucBare.hpp  dna.cpp  dna.hpp
src/main/datastructures/hi/: Forest.cpp  Forest.hpp  HI.cpp  HI.hpp  HIBuild.hpp  HIBuildItem.cpp  HIBuildItem.hpp  HIJob.hpp  HITree.cpp  HITree.hpp  HI_Attempt.hpp  QueryItem.cpp  QueryItem.hpp
src/main/datastructures/indexes/: Index.cpp  Index.hpp
src/main/datastructures/indexes/controllers/: IndexDecider.cpp  IndexDecider.hpp  Partitioner.cpp  Partitioner.hpp  Pivot.cpp  Pivot.hpp  PivotSelector.cpp  PivotSelector.hpp  PivotSorter.cpp  PivotSorter.hpp
src/main/datastructures/indexes/hi/: HI.cpp  HI.hpp  HINode.cpp  HINode.hpp  HITree.cpp  HITree.hpp  params.cpp  params.hpp
src/main/datastructures/indexes/hi/indexwrappers/: LSHWrapper.cpp  LSHWrapper.hpp  SpatialWrapper.cpp  SpatialWrapper.hpp
src/main/datastructures/indexes/hi/job/: HIBuild.cpp  HIBuildItem.cpp  HIBuildItem.hpp  HIJob.cpp  HIJob.hpp
src/main/datastructures/min/: MinJob.cpp  MinJob.hpp  TestJob.cpp  TestJob.hpp
src/main/datastructures/rm/: Job.cpp  Job.hpp  JobHandler.cpp  JobHandler.hpp  LoadBalancer.cpp  LoadBalancer.hpp  M.cpp  M.hpp  Master.cpp  Master.hpp  Primary.cpp  Primary.hpp  ReturnItem.cpp  ReturnItem.hpp  Secondary.cpp  Secondary.hpp  WorkItem.cpp  WorkItem.hpp  Worker.cpp  Worker.hpp
src/main/loaders/: loader.cpp  loader.hpp
src/main/utils/: MasterQ.cpp  MasterQ.h  MasterQ.hpp  Timer.cpp  Timer.hpp  WorkItem.cpp  WorkItem.h  carray_iterator.cpp  carray_iterator.hpp  fileutil.hpp  statutil.cpp  statutil.hpp  stringutils.hpp  testutil.cpp  testutil.hpp  vecutil.cpp  vecutil.hpp
src/test/: hi2.cpp  hi3.cpp  mpi_test.cpp  openmp_test.cpp  profile_test.cpp  stack.cpp  testall.cpp  testpart.cpp
